--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -92,6 +92,26 @@
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
+.card1 {
+  background-color: lightblue;
+  margin: 1rem;
+  flex-basis: 45%;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.card1:hover,
+.card1:focus,
+.card1:active {
+  color: #0070f3;
+  border-color: #0070f3;
+}
+
 .card:hover,
 .card:focus,
 .card:active {
